# logger

./: .gitignore  .lintstagedrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.mjs  package.json  parity-corpus.json  pnpm-lock.yaml  pyrightconfig.json  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.mts
.changeset/: SMOODEV-966-dotnet-file-rotation.md  add-go-readme.md  angry-loops-write.md  better-pants-pick.md  browser-export-condition.md  busy-deer-flash.md  busy-pigs-shop.md  calm-bobcats-shake.md  chatty-suns-look.md  clever-windows-trade.md  crazy-brooms-grow.md  crazy-worlds-stand.md  curly-steaks-reply.md  cute-jars-pump.md  drop-baseurl.md  early-breads-divide.md  early-eagles-tease.md  early-symbols-fold.md  eight-icons-judge.md  evil-hotels-peel.md  fifty-bags-fetch.md  fix-rust-clippy.md  fix-tsconfig-deprecation.md  fresh-cats-boil.md  go-context-config-lambda.md  happy-tables-end.md  honest-zebras-invent.md  hungry-rings-stick.md  icy-things-smash.md  late-pianos-doubt.md  legal-eagles-wink.md  lovely-eagles-create.md  migrate-to-tsdown.md  modern-lamps-sip.md  multi-language-parity.md  neat-pianos-mate.md  nice-cobras-smoke.md  old-bags-feel.md  orange-pianos-sell.md  otel-trace-correlation.md  (+35 more)
.claude/: settings.json
.claude/hooks/: enforce-worktree.sh
.github/workflows/: build-log-viewer.yml  pr-checks.yml  publish-nuget.yml  release.yml
.husky/: pre-commit
.smooai-logs/: output.ansi
dotnet/: SmooAI.Logger.sln
dotnet/src/SmooAI.Logger/: AwsServerLogger.cs  Level.cs  LogContext.cs  README.md  RotatingFileOutput.cs  SmooAI.Logger.csproj  SmooLogger.cs  SmooLoggerOptions.cs
dotnet/tests/SmooAI.Logger.Tests/: AwsServerLoggerTests.cs  RotatingFileOutputTests.cs  SmooAI.Logger.Tests.csproj  SmooLoggerTests.cs  TraceCorrelationTests.cs
go/: README.md  caller.go  caller_test.go  context.go  context_config.go  context_config_test.go  env.go  go.mod  go.sum  lambda.go  lambda_test.go  level.go  logger.go  logger_test.go  otel_correlation.go  otel_correlation_test.go  pretty.go  rotation.go  version.go
log-viewer/: ABOUT.md  Cargo.toml  DEPRECATED.md
log-viewer/src/: main.rs  theme.rs
python/: README.md  basedpyrightconfig.json  pyproject.toml  pyrightconfig.json
python/scripts/: bundle-log-viewer.py
python/src/smooai_logger/: __init__.py  logger.py
python/src/smooai_logger/cli/: __init__.py  log_viewer.py
python/tests/: test_aws_logger.py  test_logger.py  test_otel_correlation.py  test_parity_corpus.py
rust/logger/: Cargo.toml  README.md
rust/logger/src/: aws.rs  context.rs  env.rs  error.rs  lib.rs  logger.rs  pretty.rs  rotation.rs
rust/logger/tests/: otel_correlation.rs
scripts/: bundle-log-viewer.mjs  ci-publish.mjs  sync-versions.mjs
src/: AwsLambdaLogger.spec.ts  AwsLambdaLogger.ts  AwsServerLogger.spec.ts  AwsServerLogger.ts  BrowserLogger.spec.ts  BrowserLogger.ts  Logger.otel.spec.ts  Logger.spec.ts  Logger.ts  decycle.cjs  decycle.d.ts  env.ts  parity-corpus.spec.ts
src/cli/: log-viewer.ts
src/utils/: rotating-file-stream.stub.ts  rotation.ts
