[package]
name = "smooai-log-viewer"
version = "3.1.2"
edition = "2021"
description = "SmooAI Contextual Log Viewer"
license = "MIT"

[dependencies]
smooai-logger = { path = "../rust/logger" }
anyhow = "1"
walkdir = "2.5"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
chrono = { version = "=0.4.31", features = ["serde"] }
rfd = "0.15"
eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
egui_extras = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
duckdb = { version = "0.9.2", features = ["bundled"] }

[dependencies.simd-json]
version = "0.13"
optional = true

[features]
default = []
simd = ["simd-json"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
