[package]
name = "smooai-logger"
version = "3.1.2"
edition = "2021"
description = "Context-aware structured logging utilities for Rust mirroring the @smooai/logger toolkit."
license = "MIT"
repository = "https://github.com/SmooAI/logger"
homepage = "https://github.com/SmooAI/logger"
keywords = ["logging", "structured-logging", "smooai", "observability", "context"]
categories = ["development-tools::debugging", "logging"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
colored = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
