[package]
name = "smooai-logger"
version = "3.1.2"
edition = "2021"
description = "Context-aware structured logging utilities for Rust mirroring the @smooai/logger toolkit."
license = "MIT"
repository = "https://github.com/SmooAI/logger"
homepage = "https://github.com/SmooAI/logger"
keywords = ["logging", "structured-logging", "smooai", "observability", "context"]
categories = ["development-tools::debugging"]
readme = "README.md"

[features]
default = []
# Enables the AWS Lambda / SQS / API Gateway / ECS context helpers in
# [`crate::aws`]. Pulls in `lambda_runtime` and `aws_lambda_events` and is
# off by default so consumers that don't need AWS bindings aren't forced
# to compile them. `ecs` context helpers also work without this feature
# enabled — they read env vars only.
aws-lambda = ["dep:lambda_runtime", "dep:aws_lambda_events"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
colored = "2"
url = "2"
# OpenTelemetry **API only** (no SDK, no `@smooai/observability` — that would be
# circular): read the active span's trace_id/span_id for log↔trace correlation,
# and the `tracing` facade to tee lines into the observability OTLP appender.
tracing = { version = "0.1", default-features = false, features = ["std"] }
lambda_runtime = { version = "0.13", optional = true }
aws_lambda_events = { version = "0.16", default-features = false, features = [
  "apigw",
  "sqs",
], optional = true }
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace"] }

[dev-dependencies]
tempfile = "3"
# Correlation + tee tests: a real SDK tracer to mint an active span, and a
# tracing subscriber to capture the teed events (dev-only — the SDK dep is not
# circular; the crate itself depends on the OTel API only).
opentelemetry_sdk = { version = "0.32", features = ["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
